Fix transformation for VisualBrush elements

https://bugzilla.gnome.org/show_bug.cgi?id=742630